# compliance-auditor-env

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  benchmark_all.py  benchmark_leaderboard.py  client.py  evaluate_models.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_benchmark.py
outputs/leaderboard/: scores.json
scenarios/: __init__.py  procedural.py  registry.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  engine.py  environment.py  gradio_landing.py
tests/: test_api.py  test_difficulty_calibration.py  test_environment.py  test_evidence_chain.py  test_investigation_depth.py  test_procedural.py  test_reward_hacking.py  test_stress.py
