[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-auditor-env"
version = "0.1.0"
description = "EU AI Act Compliance Auditor — MCP-based OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "fastmcp>=3.0.0",
    "openai>=2.7.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "gradio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
compliance-auditor-env = "server.app:main"
server = "server.app:main"

[tool.setuptools]
py-modules = ["models", "client"]

[tool.setuptools.packages.find]
include = ["server*", "scenarios*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
